changed the upper case class html end css

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -180,7 +180,7 @@ body {
   background: #F2C79B;
 }
 
-.Home-Header h1 {
+.home-header h1 {
   position: absolute;
   margin-top: 16px;
   width: 692px;
@@ -197,7 +197,7 @@ body {
   color: #FFFFFF;
 }
 
-.Home-Header span {
+.home-header span {
   position: absolute;
   width: 286px;
   height: 19px;
@@ -212,7 +212,7 @@ body {
   color: #FFFFFF;
 }
 
-.Home-Header p {
+.home-header p {
   position: absolute;
   width: 308px;
   height: 48px;
@@ -226,7 +226,7 @@ body {
   color: #FFFFFF;
 }
 
-.Home-Header hr {
+.home-header hr {
   position: absolute;
   width: 18px;
   height: 0px;
@@ -250,7 +250,7 @@ body {
   background: #F2C79B;
 }
 
-.Home-Header img {
+.home-header img {
   padding-top: 95px;
   width: 1540px;
 }
