--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -543,50 +543,32 @@ header {
   text-align: center;
   height: 871px;
   padding-top: 128px;
-  margin-top: 128px;
-}
 
-.my-block span {
-  position: absolute;
-  left: 750px;
+  span {
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #161722;
+  }
 
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 19px;
-  /* identical to box height */
-
-  text-align: center;
-  text-transform: uppercase;
-
-  /* Black */
-
-  color: #161722;
-}
-
-.my-block h2 {
-  padding-top: 20px;
-  position: relative;
-  left: 554px;
-  width: 550px;
-  height: 128px;
-  margin-top: 20px;
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 64px;
-  /* or 133% */
-
-  text-align: center;
-  letter-spacing: -0.01em;
-  text-transform: uppercase;
-
-  /* Black */
-
-  color: #161722;
-
+  h2 {
+    padding-left: 400px;
+    padding-right: 400px;
+    margin-top: 20px;
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 64px;
+    text-align: center;
+    letter-spacing: -0.01em;
+    text-transform: uppercase;
+    color: #161722;
+  }
 }
 
 .my-block .image-wrapper {
@@ -596,115 +578,106 @@ header {
   vertical-align: top;
   width: 302px;
   text-align: left;
+
+  img {
+    width: 302px;
+    height: 384px;
+  }
+
+  h5 {
+    position: absolute;
+    bottom: 32px;
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: -0.01em;
+    text-transform: uppercase;
+    width: 238px;
+    margin-left: 32px;
+    color: #FFFFFF;
+  }
+
+  .image-title {
+    position: absolute;
+    bottom: 120px;
+
+    &:first-child {
+      position: absolute;
+      bottom: 220px;
+      left: 50px;
+    }
+  }
+
+  p {
+    position: absolute;
+    bottom: 30px;
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #FFFFFF;
+    opacity: 0.78;
+    margin-left: 32px;
+  }
 }
 
-.my-block .image-wrapper img {
-  width: 302px;
-  height: 384px;
-}
-
-.my-block .image-wrapper h5 {
-  position: absolute;
-  bottom: 32px;
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-  letter-spacing: -0.01em;
-  text-transform: uppercase;
-  width: 238px;
-  margin-left: 32px;
-
-
-  /* White */
-
-  color: #FFFFFF;
-}
-
-.my-block .image-wrapper .image-title {
-  position: absolute;
-  bottom: 120px;
-}
-
-.my-block .image-wrapper:first-child {
-  position: absolute;
-  bottom: 220px;
-  left: 50px;
-}
-
-.image-wrapper p {
-  position: absolute;
-  bottom: 30px;
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  /* or 150% */
-
-
-  color: #FFFFFF;
-
-  opacity: 0.78;
-  margin-left: 32px;
-
-}
+/*Event info */
 
 .block-info {
-  padding-top: 128px;
-
-}
-
-.block-info .block-info1 {
-  position: relative;
-  left: 686px;
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 19px;
-  /* identical to box height */
-
-  text-transform: uppercase;
-  /* Black */
+  margin-top: 128px;
+  margin-bottom: 208px;
   text-align: center;
-  color: #161722;
 
+  .block-info1 {
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #161722;
+  }
+
+  .block-info2 {
+    padding-left: 270px;
+    padding-right: 270px;
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 64px;
+    letter-spacing: -0.01em;
+    text-transform: uppercase;
+    color: #161722;
+  }
+
+  a {
+    padding-top: 48px;
+    position: absolute;
+    right: 110px;
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 32px;
+    color: #161722;
+    text-decoration: none;
+  }
 }
-
-.block-info .block-info2 {
-  margin: 16px;
-  position: relative;
-  left: 424px;
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 64px;
-  /* or 133% */
-
-  text-align: center;
-  letter-spacing: -0.01em;
-  text-transform: uppercase;
-
-  /* Black */
-  width: 654px;
-  height: 128px;
-  color: #161722;
-
-}
-
 
 .info-block {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 1280px;
+  max-width: 1280px;
+  width: 100%;
   padding-top: 64px;
-  padding-left: 50px;
-
+  text-align: left;
 }
 
 .info-text {
@@ -713,117 +686,108 @@ header {
   background-color: #FFF5EB;
   padding-right: 50px;
   padding-left: 89px;
-}
 
+  h5 {
+    margin-top: 16x;
+  }
 
+  p {
+    margin-top: 16px;
+  }
 
-.info-text h5 {
-  margin-top: 16x;
+  .date {
+    display: flex;
+    font-size: 20px;
+    text-align: right;
+    flex-direction: column;
 
-}
+    h5 {
+      padding: 0px;
+      margin: 0px;
+      padding-top: 60px;
+      font-family: 'Roboto Condensed';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 24px;
+      line-height: 28px;
+      letter-spacing: -0.01em;
+      text-transform: uppercase;
+      color: #161722;
+    }
 
-.info-text p {
-  margin-top: 16px;
-}
+    span {
+      font-family: 'Roboto Condensed';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 19px;
+      text-transform: uppercase;
+      color: #161722;
+    }
+  }
 
-.date {
-  display: flex;
-  font-size: 20px;
-  text-align: right;
-  flex-direction: column;
-
-
-}
-
-.date h5 {
-  padding: 0px;
-  margin: 0px;
-  padding-top: 60px;
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-  letter-spacing: -0.01em;
-  text-transform: uppercase;
-
-  /* Black */
-
-  color: #161722;
-}
-
-.date span {
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 19px;
-  /* identical to box height */
-
-  text-transform: uppercase;
-
-  /* Black */
-
-  color: #161722;
+  button {
+    margin-top: 20px;
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 16px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFD2A4;
+    display: flex;
+    flex-direction: row;
+    padding: 24px 64px;
+    gap: 16px;
+    background: #161722;
+    backdrop-filter: blur(40px);
+    border-radius: 12px;
+    border: none;
+  }
 }
 
 .block-info .block-text {
   margin-top: -21px;
-}
 
-.block-info .block-text span {
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 14px;
-  /* identical to box height */
+  span {
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.08em;
+    text-transform: uppercase;
+    background: linear-gradient(109.61deg, #A54E2B -53.83%, #DC9853 62.61%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+  }
 
-  letter-spacing: 0.08em;
-  text-transform: uppercase;
+  h5 {
+    margin-top: 16px;
+    margin-bottom: 16px;
+    width: 250px;
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: -0.01em;
+    text-transform: uppercase;
+    color: #161722;
+  }
 
-  /* Gradient */
-
-  background: linear-gradient(109.61deg, #A54E2B -53.83%, #DC9853 62.61%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  text-fill-color: transparent;
-}
-
-.block-info .block-text h5 {
-
-  margin-top: 16px;
-  margin-bottom: 16px;
-  width: 250px;
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-  letter-spacing: -0.01em;
-  text-transform: uppercase;
-
-  /* Black */
-
-  color: #161722;
-}
-
-.block-info .block-text p {
-
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  /* or 150% */
-
-
-  /* Black */
-
-  color: #161722;
-
-  opacity: 0.78;
+  p {
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #161722;
+    opacity: 0.78;
+  }
 }
 
 .icon-and-time,
@@ -836,54 +800,12 @@ header {
   color: #161722;
   display: flex;
   align-items: center;
-
-}
-
-.icon-and-location {
   margin-top: -20px;
-  margin-bottom: 22px;
-}
 
-.icon-and-time img,
-.icon-and-location img {
-  margin-right: 8px;
-}
-
-.info-text button {
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 16px;
-  text-align: center;
-  text-transform: uppercase;
-  color: #FFD2A4;
-  width: 191px;
-  height: 64px;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 24px 64px;
-  gap: 16px;
-  background: #161722;
-  backdrop-filter: blur(40px);
-  border-radius: 12px;
-}
-
-.block-info a {
-  position: absolute;
-  padding-top: 50px;
-  right: 200px;
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 32px;
-  color: #161722;
-  text-decoration: none;
+  p {
+    text-align: left;
+    padding-left: 16px;
+  }
 }
 
 /*content CTA */
