added (social network icons)

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1121,7 +1121,8 @@ header {
   a {
     display: inline-block;
     margin-right: 16px;
-  }
+    text-decoration: none;
+    }
 }
 
 .content-form {
